--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			black; ">This is the first class.
 			</p>
 
-			<iframe style="width:640px; height:480px" src="game/index.html"></iframe>
+			<iframe  src="game/index.html"></iframe>
 
 			<div class="first-box d-none"></div>
 
