--- a/game/index.html
+++ b/game/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Michael_marioexe.js?MSYZB=915739720"></script>
+        <script type="text/javascript" src="html5game/Michael_marioexe.js?KRFZB=1767624444"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
